--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>I want to become a software developer because I enjoy solving problems and creating things that make a real impact. Technology is constantly evolving, and I’m excited by the opportunity to learn new skills and build software that improves people’s lives. I’m drawn to the creativity, logic, and collaboration involved in development, and I see it as a career that offers both challenge and continuous growth.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
